fixed horizontal scroll by removing width from body

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,7 +1,6 @@
 body {
   font-size: 1.125em;
   background-color: #f6f3f2;
-  width: 100%;
   font-family: "Piedra", cursive;
 }
 
